<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zakaria.com.interestcalculator.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/principal_amount"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/principal_amountet"
            android:layout_weight="1"
            android:id="@+id/principalAmount"
            android:inputType="numberDecimal"
            android:textSize="18sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interest_amount"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/interest_rateet"
            android:layout_weight="1"
            android:id="@+id/interestRate"
            android:inputType="numberDecimal"
            android:textSize="18sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_period"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/time_periodet"
            android:layout_weight="1"
            android:id="@+id/timePeriod"
            android:inputType="numberDecimal"
            android:textSize="18sp"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        android:onClick="btnInterestCalculate"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interest_amount"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/interest_amounttv"
            android:layout_weight="1"
            android:id="@+id/interestAmount"
            android:inputType="numberDecimal"
            android:textSize="18sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_amount"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/total_amounttv"
            android:layout_weight="1"
            android:id="@+id/totalAmount"
            android:inputType="numberDecimal"
            android:textSize="18sp"/>


    </LinearLayout>



</LinearLayout>
